# data-structures-and-algorithms

./: .gitignore
python/: pyproject.toml
python/data_structures/linear/: content.md
python/data_structures/linear/array/: array.py
python/data_structures/linear/linked_list/: circular_linked_list.py  content.md  doubly_linked_list.py  models.py  singly_linked_list.py
python/data_structures/linear/stack/: dynamic_stack.py  fixed_stack.py
python/dsa/: main.py
python/tests/: test_fixed_stack.py
